deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -104,6 +104,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-225">
+      Version 2.2.5
+     </a>
+    </li>
+    <li>
      <a href="#version-224">
       Version 2.2.4
      </a>
@@ -210,11 +215,37 @@ See the
  </a>
  for specific information about upgrading.
 </p>
+<h2 id="version-225">
+ Version 2.2.5
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-224">
  Version 2.2.4
 </h2>
 <p>
- Released TBD
+ Released 2024-12-02
+</p>
+<p>
+ <code>
+  Security
+ </code>
+</p>
+<ul>
+ <li>
+  A security bug was patched in the
+  <code>
+   saml2-library
+  </code>
+  that allowed for XXE during the parsing
+  of SAML2-messages (CVE-2024-52596)
+ </li>
+</ul>
+<p>
+ <code>
+  Other fixes
+ </code>
 </p>
 <ul>
  <li>
