deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -114,6 +114,11 @@
      </a>
     </li>
     <li>
+     <a href="#version-216_1">
+      Version 2.1.6
+     </a>
+    </li>
+    <li>
      <a href="#version-215">
       Version 2.1.5
      </a>
@@ -206,6 +211,32 @@ See the
 <p>
  Released TBD
 </p>
+<h2 id="version-216">
+ Version 2.1.6
+</h2>
+<p>
+ Released 2024-12-02
+</p>
+<p>
+ <code>
+  Security
+ </code>
+</p>
+<ul>
+ <li>
+  A security bug was patched in the
+  <code>
+   saml2-library
+  </code>
+  that allowed for XXE during the parsing
+  of SAML2-messages (CVE-2024-52596)
+ </li>
+</ul>
+<p>
+ <code>
+  Other fixes
+ </code>
+</p>
 <ul>
  <li>
   Added a missing use-statement that would cause a 'class not found' exception.
@@ -267,7 +298,7 @@ See the
   (v2.3.6).
  </li>
 </ul>
-<h2 id="version-216">
+<h2 id="version-216_1">
  Version 2.1.6
 </h2>
 <p>
