--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -104,6 +104,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-2015">
+      Version 2.0.15
+     </a>
+    </li>
+    <li>
      <a href="#version-2014">
       Version 2.0.14
      </a>
@@ -186,6 +191,22 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-2015">
+ Version 2.0.15
+</h2>
+<p>
+ Released 2024-12-02
+</p>
+<ul>
+ <li>
+  A security bug was patched in the
+  <code>
+   saml2-library
+  </code>
+  that allowed for XXE during the parsing
+  of SAML2-messages (CVE-2024-52596)
+ </li>
+</ul>
 <h2 id="version-2014">
  Version 2.0.14
 </h2>
