--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -104,6 +104,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-236">
+      Version 2.3.6
+     </a>
+    </li>
+    <li>
      <a href="#version-235">
       Version 2.3.5
      </a>
@@ -242,12 +247,23 @@ See the
  </a>
  for specific information about upgrading.
 </p>
-<h2 id="version-235">
- Version 2.3.5
+<h2 id="version-236">
+ Version 2.3.6
 </h2>
 <p>
  Released TBD
 </p>
+<h2 id="version-235">
+ Version 2.3.5
+</h2>
+<p>
+ Released 2024-12-02
+</p>
+<ul>
+ <li>
+  Fix a regression that would cause the translations for modules to revert to English
+ </li>
+</ul>
 <h2 id="version-234">
  Version 2.3.4
 </h2>
