deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/devel/saml/nameid.html
+++ b/devel/saml/nameid.html
@@ -500,7 +500,7 @@ This can be used to set the
           'name2oid',
       ],
   ],
-  // The URN attribute NameFormat for OID attributes.
+  // The URN attribute NameFormat for OID attributes. This is the default.
   'attributes.NameFormat' =&gt; 'urn:oasis:names:tc:SAML:2.0:attrname-format:uri',
   'attributeencodings' =&gt; [
       'urn:oid:1.3.6.1.4.1.5923.1.1.1.10' =&gt; 'raw', /* eduPersonTargetedID with oid NameFormat is a raw XML value */
