deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/devel/saml/nameid.html
+++ b/devel/saml/nameid.html
@@ -181,6 +181,23 @@
  </dd>
  <dt>
   <code>
+   identifyingAttributes
+  </code>
+ </dt>
+ <dd>
+  An array of attribute names to consider for the unique user ID.
+ </dd>
+ <dd>
+  The first attribute found in this array that's being released to the SP
+ </dd>
+ <dd>
+  will be used. Note that using this option means you must not also use
+ </dd>
+ <dd>
+  identifyingAttribute.
+ </dd>
+ <dt>
+  <code>
    Format
   </code>
  </dt>
@@ -457,7 +474,7 @@ This can be used to set the
       ],
       3 =&gt; [
           'class' =&gt; 'saml:AttributeNameID',
-          'identifyingAttribute' =&gt; 'mail',
+          'identifyingAttributes' =&gt; ['mail','eduPersonPrincipalName'],
           'Format' =&gt; 'urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress',
       ],
   ],
@@ -500,7 +517,7 @@ This can be used to set the
           'name2oid',
       ],
   ],
-  // The URN attribute NameFormat for OID attributes. This is the default.
+  // The URN attribute NameFormat for OID attributes.
   'attributes.NameFormat' =&gt; 'urn:oasis:names:tc:SAML:2.0:attrname-format:uri',
   'attributeencodings' =&gt; [
       'urn:oid:1.3.6.1.4.1.5923.1.1.1.10' =&gt; 'raw', /* eduPersonTargetedID with oid NameFormat is a raw XML value */
