deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/devel/simplesamlphp-install-repo.html
+++ b/devel/simplesamlphp-install-repo.html
@@ -104,7 +104,7 @@
 </h2>
 <p>
  Review the
- <a href="../simplesamlphp-install.html">
+ <a href="simplesamlphp-install#prerequisites.html">
   prerequisites
  </a>
  from the main installation guide.
