deploy: d54329991d5c14b3d495d51ba76588ca66bbc30f

--- a/2.0/simplesamlphp-install-repo.html
+++ b/2.0/simplesamlphp-install-repo.html
@@ -94,6 +94,16 @@
 <p>
  These are some notes about running SimpleSAMLphp from the repository.
 </p>
+<h2 id="prerequisites">
+ Prerequisites
+</h2>
+<p>
+ Review the
+ <a href="simplesamlphp-install.html">
+  prerequisites
+ </a>
+ from the main installation guide.
+</p>
 <h2 id="installing-from-git">
  Installing from git
 </h2>
