--- a/2.1/simplesamlphp-install-repo.html
+++ b/2.1/simplesamlphp-install-repo.html
@@ -99,7 +99,7 @@
 </h2>
 <p>
  Review the
- <a href="../simplesamlphp-install.html">
+ <a href="simplesamlphp-install.html">
   prerequisites
  </a>
  from the main installation guide.
