--- a/2.3/simplesamlphp-install.html
+++ b/2.3/simplesamlphp-install.html
@@ -591,7 +591,7 @@ whatever you want, but the name must be specified in the
  </code>
  file of
 SimpleSAMLphp as described in
- <a href="simplesamlphp-install#configuration.html">
+ <a href="simplesamlphp-install.html#configuration">
   the section called “SimpleSAMLphp configuration: config.php”
  </a>
  .
@@ -1108,7 +1108,7 @@ this folder there are a lot of subfolders for library, metadata, configuration, 
  </code>
  directive, as
 described in
- <a href="simplesamlphp-install#configuring-apache.html">
+ <a href="simplesamlphp-install.html#configuring-apache">
   the section called “Configuring Apache”
  </a>
  . This is not the only
