deploy: d54329991d5c14b3d495d51ba76588ca66bbc30f

--- a/2.0/simplesamlphp-install.html
+++ b/2.0/simplesamlphp-install.html
@@ -591,7 +591,7 @@ whatever you want, but the name must be specified in the
  </code>
  file of
 SimpleSAMLphp as described in
- <a href="simplesamlphp-install.html#configuration">
+ <a href="simplesamlphp-install#configuration.html">
   the section called “SimpleSAMLphp configuration: config.php”
  </a>
  .
@@ -1115,7 +1115,7 @@ this folder there are a lot of subfolders for library, metadata, configuration, 
  </code>
  directive, as
 described in
- <a href="simplesamlphp-install.html#configuring-apache">
+ <a href="simplesamlphp-install#configuring-apache.html">
   the section called “Configuring Apache”
  </a>
  . This is not the only
