--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -206,6 +206,11 @@ See the
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fixed PHP 8.4 deprecation notices
+ </li>
+</ul>
 <h2 id="version-216">
  Version 2.1.6
 </h2>
