--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -216,6 +216,11 @@ See the
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fixed PHP 8.4 deprecation notices
+ </li>
+</ul>
 <h2 id="version-224">
  Version 2.2.4
 </h2>
