--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -248,6 +248,11 @@ See the
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fixed PHP 8.4 deprecation notices
+ </li>
+</ul>
 <h2 id="version-235">
  Version 2.3.5
 </h2>
