--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -99,17 +99,17 @@
    </a>
    <ul>
     <li>
+     <a href="#version-218">
+      Version 2.1.8
+     </a>
+    </li>
+    <li>
      <a href="#version-217">
       Version 2.1.7
      </a>
     </li>
     <li>
      <a href="#version-216">
-      Version 2.1.6
-     </a>
-    </li>
-    <li>
-     <a href="#version-216_1">
       Version 2.1.6
      </a>
     </li>
@@ -200,8 +200,8 @@ See the
  </a>
  for specific information about upgrading.
 </p>
-<h2 id="version-217">
- Version 2.1.7
+<h2 id="version-218">
+ Version 2.1.8
 </h2>
 <p>
  Released TBD
@@ -211,8 +211,8 @@ See the
   Fixed PHP 8.4 deprecation notices
  </li>
 </ul>
-<h2 id="version-216">
- Version 2.1.6
+<h2 id="version-217">
+ Version 2.1.7
 </h2>
 <p>
  Released 2024-12-02
@@ -298,7 +298,7 @@ See the
   (v2.3.6).
  </li>
 </ul>
-<h2 id="version-216_1">
+<h2 id="version-216">
  Version 2.1.6
 </h2>
 <p>
