--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -220,6 +220,9 @@ See the
  <li>
   Fixed PHP 8.4 deprecation notices
  </li>
+ <li>
+  Fixed infinite recursion (#2367)
+ </li>
 </ul>
 <h2 id="version-224">
  Version 2.2.4
