--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -252,6 +252,9 @@ See the
  <li>
   Fixed PHP 8.4 deprecation notices
  </li>
+ <li>
+  Fixed infinite recursion (#2367)
+ </li>
 </ul>
 <h2 id="version-235">
  Version 2.3.5
