deploy: d54329991d5c14b3d495d51ba76588ca66bbc30f

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -223,6 +223,9 @@ See the
  <li>
   Fixed infinite recursion (#2367)
  </li>
+ <li>
+  Fixed "Undefined array key" warning in RequestedAuthnContextSelector if no RAC is present in the request
+ </li>
 </ul>
 <h2 id="version-224">
  Version 2.2.4
