--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -213,6 +213,9 @@ See the
  <li>
   Fixed infinite recursion (#2367)
  </li>
+ <li>
+  Fixed "Undefined array key" warning in RequestedAuthnContextSelector if no RAC is present in the request
+ </li>
 </ul>
 <h2 id="version-217">
  Version 2.1.7
