--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -255,6 +255,9 @@ See the
  <li>
   Fixed infinite recursion (#2367)
  </li>
+ <li>
+  Fixed "Undefined array key" warning in RequestedAuthnContextSelector if no RAC is present in the request
+ </li>
 </ul>
 <h2 id="version-235">
  Version 2.3.5
